--- a/dev/MiniClock.csproj
+++ b/dev/MiniClock.csproj
@@ -36,12 +36,11 @@
     <ApplicationIcon>prd.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Json, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c6752e45808247c2, processorArchitecture=MSIL">
-      <HintPath>..\packages\JSON.1.0.1\lib\net40\Json.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Json">
+      <HintPath>..\lib\Json.dll</HintPath>
     </Reference>
     <Reference Include="Praja.Core">
-      <HintPath>..\..\lib\Praja.Core.dll</HintPath>
+      <HintPath>..\lib\Praja.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
