--- a/dev/MiniClock.csproj
+++ b/dev/MiniClock.csproj
@@ -35,6 +35,9 @@
   <PropertyGroup>
     <ApplicationIcon>prd.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Json">
       <HintPath>..\lib\Json.dll</HintPath>
